<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">WonderfulRedtooth</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="connect_bt">Connect to Device</string>
    <string name="start_proxy">Start proxy</string>
    <string name="client_connected">Client Connected</string>
    <string name="proxy_started">Proxy started</string>
    <string name="simulate_client">Simulate client</string>
    <string name="simulate_server">Simulate server</string>
    <string name="stop_recorder">Stop recorder</string>
    <string name="close_connections">Close Connections</string>
    <string name="title_activity_message">Message</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_message_dashboard">MessageDashboardActivity</string>
    <string name="go_to_dashboard">Go to dashboard</string>

</resources>
