<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="1dp">

        <Button
            android:id="@+id/connect_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/connect_bt" />

        <TextView
            android:id="@+id/id_listening_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_start_proxy_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_proxy"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:onClick="closeConnections"
                android:text="@string/close_connections" />
        </LinearLayout>

        <Switch
            android:id="@+id/id_auto_proxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auto Proxy" />

        <Button
            android:id="@+id/id_stop_rec_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopRecorder"
            android:text="@string/stop_recorder" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToDashborad"
            android:text="@string/go_to_dashboard" />

    </LinearLayout>

</RelativeLayout>
